--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="menuRockets">Rokets</string>
     <string name="menuCrew">Crew</string>
 
-</resources>
+    <string name="toolbarText">Dragons</string>
+
+
+    </resources>
