crew room fragment added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="toolbarText">Dragons</string>
 
     <string name="favoritetoolbarText">Favorite Rockets</string>
-
+    <string name="favoritecrewtoolbarText">Favorite Crews</string>
 
 </resources>
